Bug #35844 - blind fix for Safari (double scrollbar)

--- a/styles/base.scss
+++ b/styles/base.scss
@@ -589,12 +589,16 @@ div.page-wrapper {
   background: #f8f9fb;
   overflow-y: auto;
   overflow-x: hidden;
+
+  > .fluid.container {
+    flex-grow: 0;
+    flex-shrink: 0;
+  }
+
   > .flex.stretched,
   .marketplace-container > .flex.stretched {
     flex-grow: 1;
     flex-shrink: 1;
-    height: 100%;
-    max-height: 100%;
   }
 
   .marketplace-container {
